[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qlt-etf-single-swing-v1"
version = "0.1.0"
description = "Standalone shared project for Quantylab ETF single swing"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "requests",
    "scikit-learn",
    "tabulate",
    "torch>=2.0",
    "tqdm",
]

[project.scripts]
qlt-etf-build-dataset = "dataset_builder:main"
qlt-etf-train = "train:main"
qlt-etf-backtest = "backtest:main"
qlt-etf-predict = "prediction:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "agent",
    "api_client",
    "backtest",
    "dataset_builder",
    "environment",
    "network",
    "prediction",
    "supervised_trainer",
    "target_etfs",
    "train",
    "train_monitor",
    "trainer",
    "visualizer",
]
